# rust-htop

./: Cargo.toml  Dockerfile  README.md  jsconfig.json  package-lock.json  package.json  stop-remove-build-run.sh  to-do
assets/css/: index.css
assets/js/: index.mjs
src/: asset_handler.rs  cpu_usage.rs  disk_info.rs  index.html  index.js  index.mjs  main.rs  processes.rs  system_info.rs  utils.rs
src/views/: index.html
